Renamed (to STARS_*) and reworked a bit every procedure, added comments

--- a/C-core/makefile
+++ b/C-core/makefile
@@ -3,6 +3,6 @@ INCLUDE=../include/
 LIBDIRS=/Users/mikhala/Applications/Conda/envs/py2_conmkl/lib/
 LIBS=-lmkl_rt
 WARNINGS=-Wall -Wno-incompatible-pointer-types
-
+SRC=run.c blr.c misc.c kernel.c
 all:
-	$(CC) -I$(INCLUDE) -L$(LIBDIRS) block_lowrank.c misc.c run.c $(LIBS) -o a.out $(WARNINGS)
+	$(CC) -I$(INCLUDE) -L$(LIBDIRS) $(LIBS) $(SRC) -o a.out $(WARNINGS)
