--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,12 @@
 # Define the source files
-set ( STARSH_SRC array.c
-                 blr.c
-                 electrostatics.c
-                 misc.c
-                 problem.c
-                 spatial.c
-                 )
+file(GLOB STARSH_SRC "*.c")
+# set ( STARSH_SRC array.c
+#                  blr.c
+#                  electrostatics.c
+#                  misc.c
+#                  problem.c
+#                  spatial.c
+#                  )
 
 include_directories( ${PROJECT_SOURCE_DIR}/include)
 
