--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -3,9 +3,34 @@ file(GLOB tests_files "*.c")
 
 include_directories( ${PROJECT_SOURCE_DIR}/include)
 
+# Uses RUNPATH instead of RPATH
+SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--enable-new-dtags")
+
 foreach( test_src ${tests_files} )
 	get_filename_component( test_exe ${test_src}  NAME_WE )
-	add_executable( ${test_exe} ${test_src})
-	target_link_libraries( ${test_exe} starsh ${CBLAS_LIBRARIES} ${LAPACKE_LIBRARIES} )
+	add_executable( ${test_exe} ${test_src} )
+	target_link_libraries( ${test_exe} starsh ${CBLAS_LIBRARIES} ${LAPACKE_LIBRARIES} gomp )
 	install( TARGETS ${test_exe} DESTINATION lib/testing )
 endforeach()
+
+# Copies TXT files needed for testing
+file(GLOB tests_files "*.txt")
+list(REMOVE_ITEM tests_files "${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt")
+foreach( file ${tests_files} )
+	get_filename_component( txt ${file} NAME )
+	# copy the files before building the last test
+	add_custom_command( TARGET ${test_exe} PRE_BUILD
+	                    COMMAND ${CMAKE_COMMAND} -E copy
+	                    ${CMAKE_CURRENT_SOURCE_DIR}/${txt}
+	                    ${CMAKE_CURRENT_BINARY_DIR}/.
+	                    )
+endforeach()
+
+# Add basic tests. To run them type: 'make test' in build directory
+add_test(NAME Array:ok COMMAND array )
+add_test(NAME Astronomy:ok COMMAND astronomy ./ 512 64 1e-3 astronomy.outfile )
+add_test(NAME Astronomy:usage COMMAND astronomy )
+set_tests_properties( Astronomy:usage PROPERTIES WILL_FAIL ON )
+add_test(NAME Spatial:ok COMMAND spatial 8 8 64 32 1e-3 0.1 spatial.outfile )
+add_test(NAME Electrostatics:ok COMMAND electrostatics 8 8 64 32 1e-3 )
+
