Add OpenMP detection for CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ if("${PROJECT_SOURCE_DIR}" STREQUAL "${PROJECT_BINARY_DIR}")
 endif()
 
 
+
 # Set the RPATH config
 # --------------------
 # use, i.e. don't skip the full RPATH for the build tree
@@ -24,6 +25,13 @@ set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
 # This project eeds C99 standard to compile properly
 # (could have used CMAKE_C_FLAGS instead)
 ADD_DEFINITIONS( -std=c99 )
+
+find_package(OpenMP REQUIRED)
+if (OPENMP_FOUND)
+    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+endif()
+
 
 # STARS-H code
 add_subdirectory(src)
@@ -149,7 +157,9 @@ if( STARSH_TESTING )
 		message(FATAL_ERROR "A LAPACKE library is required but has not been found")
 	endif()
 
+
 	# BUILD TESTS
 	enable_testing() # enables ctest
 	add_subdirectory(testing)
 endif()
+
