--- a/docs/config
+++ b/docs/config
@@ -570,7 +570,7 @@ INLINE_INFO            = YES
 # name. If set to NO, the members will appear in declaration order.
 # The default value is: YES.
 
-SORT_MEMBER_DOCS       = YES
+SORT_MEMBER_DOCS       = NO
 
 # If the SORT_BRIEF_DOCS tag is set to YES then doxygen will sort the brief
 # descriptions of file, namespace and class members alphabetically by member
@@ -791,8 +791,17 @@ WARN_LOGFILE           =
 # Note: If this tag is empty the current directory is searched.
 
 INPUT                  = "index.dox" \
-                         "../src/backends/sequential/blrm" \
-                         "../include/stars.h"
+                         "../src/applications" \
+                         "../src/backends/sequential"\
+                         "../src/backends/sequential/blrm"\
+                         "../src/backends/sequential/kernels"\
+                         "../src/backends/omp"\
+                         "../src/backends/omp/blrm"\
+                         "../src/backends/starpu"\
+                         "../src/backends/starpu/blrm"\
+                         "../src/backends/starpu/kernels"\
+                         "../src/control"\
+                         "../include/starsh.h"
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
