Add synthetic matrices in applications and examples; add documentation; move old headers to unrefactored directory

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Defines the source files of the tests. Each file generates 1 test
-set(tests_files spatial.c)
+set(tests_files spatial.c rndtiled.c)
 
 include_directories( ${PROJECT_SOURCE_DIR}/include)
 
