--- a/docs/config
+++ b/docs/config
@@ -801,7 +801,7 @@ INPUT                  = "index.dox" \
                          "../src/backends/starpu/blrm"\
                          "../src/backends/starpu/kernels"\
                          "../src/control"\
-                         "../include/starsh.h"
+                         "../include"
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
