Add some readme in documentation; add Conjugate Gradient method and plug it into spatial example

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@
 set(STARSH_SRC)
 add_subdirectory(control)
 add_subdirectory(applications)
+add_subdirectory(itersolvers)
 
 set( BACKEND_TYPE "sequential" "omp" "starpu" CACHE STRING "Options are: sequential, omp, starpu" )
 add_subdirectory(backends)
