--- a/docs/config
+++ b/docs/config
@@ -790,7 +790,7 @@ WARN_LOGFILE           =
 # spaces. See also FILE_PATTERNS and EXTENSION_MAPPING
 # Note: If this tag is empty the current directory is searched.
 
-INPUT                  = "index.dox" \
+INPUT                  = "index.md" \
                          "../src/applications" \
                          "../src/backends/sequential"\
                          "../src/backends/sequential/blrm"\
