--- a/src/backends/omp/blrm/CMakeLists.txt
+++ b/src/backends/omp/blrm/CMakeLists.txt
@@ -3,5 +3,6 @@ set ( STARSH_SRC ${CMAKE_CURRENT_SOURCE_DIR}/dqp3.c
                  ${CMAKE_CURRENT_SOURCE_DIR}/drsdd2.c
                  ${CMAKE_CURRENT_SOURCE_DIR}/drsdd.c
                  ${CMAKE_CURRENT_SOURCE_DIR}/dsdd.c
+                 ${CMAKE_CURRENT_SOURCE_DIR}/dmml.c
                  ${STARSH_SRC}
                  PARENT_SCOPE )
