Add timings for matrix and drsdd in omp_rsdd, link to ecrc_cmake, add test on symmetric positivity after compression

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,17 +48,17 @@ if (OPENMP_FOUND)
 endif()
 
 
-## CMAKE MODULES :: HICMA
+## CMAKE MODULES :: ECRC
 ## REQUIRED FOR TESTS TO LINK LIBRARIES
-if(NOT EXISTS "${PROJECT_SOURCE_DIR}/cmake_modules/hicma/modules" )
-	message(FATAL_ERROR "HICMA CMake modules were not found.\n"
+if(NOT EXISTS "${PROJECT_SOURCE_DIR}/cmake_modules/ecrc/modules" )
+	message(FATAL_ERROR "ECRC CMake modules were not found.\n"
 	                    "Have you done: 'git submodule init && git submodule update'?" )
 else()
-	## HICMA INITIALIZATION
+	## ECRC INITIALIZATION
 	list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules)
-	list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake_modules/hicma/modules")
-	set(HICMA_CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules/hicma/modules )
-	include(HicmaInit)
+	list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake_modules/ecrc/modules")
+        set(ECRC_CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules/ecrc/modules )
+        include(EcrcInit)
 endif()
 
 
@@ -104,7 +104,7 @@ if( STARSH_TESTING )
 			list(APPEND CMAKE_INSTALL_RPATH "${CBLAS_LIBRARY_DIRS}")
 		endif()
 	else()
-		if(HICMA_VERBOSE_FIND_PACKAGE)
+		if(ECRC_VERBOSE_FIND_PACKAGE)
 			if(CBLAS_STANDALONE OR NOT CBLAS_WORKS)
 				if (NOT CBLAS_cblas.h_DIRS)
 					Print_Find_Header_Status(cblas cblas.h)
@@ -114,8 +114,8 @@ if( STARSH_TESTING )
 				endif ()
 			endif()
 		else()
-			message(WARNING "CBLAS library has not been found and HICMA_VERBOSE_FIND_PACKAGE is set to OFF"
-			                "Try to activate HICMA_VERBOSE_FIND_PACKAGE option (-DHICMA_VERBOSE_FIND_PACKAGE=ON) to get some hints for the detection")
+			message(WARNING "CBLAS library has not been found and ECRC_VERBOSE_FIND_PACKAGE is set to OFF"
+			                "Try to activate ECRC_VERBOSE_FIND_PACKAGE option (-DECRC_VERBOSE_FIND_PACKAGE=ON) to get some hints for the detection")
 		endif()
 		message(FATAL_ERROR "A CBLAS library is required but has not been found")
 	endif()
@@ -138,7 +138,7 @@ if( STARSH_TESTING )
 			set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${LAPACKE_LINKER_FLAGS}")
 		endif()
 	else()
-		if(HICMA_VERBOSE_FIND_PACKAGE)
+		if(ECRC_VERBOSE_FIND_PACKAGE)
 			if (LAPACKE_STANDALONE OR NOT LAPACKE_WORKS)
 				if (NOT LAPACKE_lapacke.h_DIRS)
 					Print_Find_Header_Status(lapacke lapacke.h)
@@ -148,8 +148,8 @@ if( STARSH_TESTING )
 				endif ()
 			endif()
 		else()
-			message(WARNING "LAPACKE library has not been found and HICMA_VERBOSE_FIND_PACKAGE is set to OFF"
-			                "Try to activate HICMA_VERBOSE_FIND_PACKAGE option (-DHICMA_VERBOSE_FIND_PACKAGE=ON) to get some hints for the detection")
+			message(WARNING "LAPACKE library has not been found and ECRC_VERBOSE_FIND_PACKAGE is set to OFF"
+			                "Try to activate ECRC_VERBOSE_FIND_PACKAGE option (-DECRC_VERBOSE_FIND_PACKAGE=ON) to get some hints for the detection")
 		endif()
 		message(FATAL_ERROR "A LAPACKE library is required but has not been found")
 	endif()
@@ -169,5 +169,6 @@ endforeach()
 	# BUILD TESTS
 	enable_testing() # enables ctest
 	add_subdirectory(examples)
+        add_subdirectory(testing)
 endif()
 
