--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "cmake_modules/hicma"]
-	path = cmake_modules/hicma
-	url = https://github.com/ecrc/hicma_cmake.git
+[submodule "cmake_modules/ecrc"]
+	path = cmake_modules/ecrc
+	url = https://github.com/ecrc/ecrc_cmake
