--- a/src/backends/starpu/CMakeLists.txt
+++ b/src/backends/starpu/CMakeLists.txt
@@ -1,3 +1,6 @@
+# This project needs GNU99 standard to compile properly with StarPU
+# (could have used CMAKE_C_FLAGS instead)
+add_definitions("-std=gnu99")
 # set the values of the variable in the parent scope
 add_subdirectory(blrm)
 add_subdirectory(kernels)
