--- a/docs/config.in
+++ b/docs/config.in
@@ -790,18 +790,18 @@ WARN_LOGFILE           =
 # spaces. See also FILE_PATTERNS and EXTENSION_MAPPING
 # Note: If this tag is empty the current directory is searched.
 
-INPUT                  = "index.md" \
-                         "../src/applications" \
-                         "../src/backends/sequential"\
-                         "../src/backends/sequential/blrm"\
-                         "../src/backends/sequential/kernels"\
-                         "../src/backends/omp"\
-                         "../src/backends/omp/blrm"\
-                         "../src/backends/starpu"\
-                         "../src/backends/starpu/blrm"\
-                         "../src/backends/starpu/kernels"\
-                         "../src/control"\
-                         "../include"
+INPUT                  = "@CMAKE_CURRENT_SOURCE_DIR@/index.md" \
+                         "@CMAKE_CURRENT_SOURCE_DIR@/../src/applications" \
+                         "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/sequential"\
+                         "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/sequential/blrm"\
+                         "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/sequential/kernels"\
+                         "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/omp"\
+                         "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/omp/blrm"\
+                         "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/starpu"\
+                         "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/starpu/blrm"\
+                         "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/starpu/kernels"\
+                         "@CMAKE_CURRENT_SOURCE_DIR@/../src/control"\
+                         "@CMAKE_CURRENT_SOURCE_DIR@/../include"
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
