--- a/src/backends/starpu/blrm/CMakeLists.txt
+++ b/src/backends/starpu/blrm/CMakeLists.txt
@@ -1,6 +1,7 @@
 # set the values of the variable in the parent scope
-set(STARSH_SRC "${CMAKE_CURRENT_SOURCE_DIR}/dqp3.c"
+set(SRC
+    "${CMAKE_CURRENT_SOURCE_DIR}/dqp3.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/drsdd2.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/drsdd.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/dsdd.c"
-    "${STARSH_SRC}" PARENT_SCOPE)
+    ${SRC} PARENT_SCOPE)
