--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -3,4 +3,6 @@ set(STARSH_PUB_HDR
     "${CMAKE_CURRENT_SOURCE_DIR}/starsh.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/starsh-spatial.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/starsh-rndtiled.h"
-    ${STARSH_PUB_HDR} PARENT_SCOPE)
+)
+
+install(FILES ${STARSH_PUB_HDR} DESTINATION ${INCDIR})
