--- a/src/backends/openmp/CMakeLists.txt
+++ b/src/backends/openmp/CMakeLists.txt
@@ -1,3 +1,5 @@
-# set the values of the variable in the parent scope
+set(SRC)
 add_subdirectory("blrm")
-set(STARSH_SRC ${STARSH_SRC} PARENT_SCOPE)
+add_library(backends_openmp OBJECT ${SRC})
+target_include_directories(backends_openmp PRIVATE "${CMAKE_SOURCE_DIR}/include")
+target_compile_options(backends_openmp PUBLIC "${OpenMP_C_FLAGS}")
