--- a/src/backends/openmp/blrm/CMakeLists.txt
+++ b/src/backends/openmp/blrm/CMakeLists.txt
@@ -1,7 +1,8 @@
 # set the values of the variable in the parent scope
-set(STARSH_SRC "${CMAKE_CURRENT_SOURCE_DIR}/dqp3.c"
+set(SRC
+    "${CMAKE_CURRENT_SOURCE_DIR}/dqp3.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/drsdd2.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/drsdd.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/dsdd.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/dmml.c"
-    "${STARSH_SRC}" PARENT_SCOPE)
+    PARENT_SCOPE)
