--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -10,5 +10,7 @@ foreach(test_src ${tests_files})
     get_filename_component(test_exe ${test_src} NAME_WE)
     add_executable(${test_exe} ${test_src})
     target_link_libraries(${test_exe} starsh ${CBLAS_LIBRARIES}
-        ${LAPACKE_LIBRARIES})
+        ${LAPACKE_LIBRARIES} ${OpenMP_C_FLAGS})
+    #target_compile_options(${test_exe} PRIVATE "${OpenMP_C_FLAGS}")
+
 endforeach()
